<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/dateAndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="TextView" />

    <TextView
        android:id="@+id/build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_app_build"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/buildValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="TextView"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_model"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modelValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="TextView"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/deviceID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_id"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deviceIDValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="TextView"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/androidVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_version"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/androidVersionValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="TextView"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_level"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/apiValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="TextView"
        android:textAlignment="textEnd" />
</LinearLayout>